# ht

./: Cargo.toml  README.md
src/: main.rs  project.rs  project_config.rs
src/cli/: git.rs  mod.rs  sf.rs
src/commands/: mod.rs  verify.rs  version.rs
src/utils/: mod.rs  project.rs  project_config.rs  sf.rs  system.rs
tests/resources/: sfdx-project.json
tests/resources/fake-salesforce-project/: sfdx-project.json
tests/resources/fake-salesforce-project/config/: project-scratch-def.json
tests/resources/fake-salesforce-project/force-app/main/default/classes/: Fake.cls  FakeTest.cls
