[package]
name = "ht"
version = "0.1.0"
authors = ["Wesley Springer"]
description = "A Salesforce CI/CD build tool"
keywords = [
    "salesforce",
    "ci",
    "cd",
    "github",
    "actions",
    "build",
    "tool",
    "tooling",
    "cli",
    "command",
    "line",
    "mcgee",
]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.9"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
cli-table = "0.4"
enum-as-inner = "0.6.1"
rand = "0.8.5"
